# swagger.yaml
@@ -2494,6 +2494,419 @@ definitions:
         x-go-name: Vendor
     type: object
     x-go-package: yunion.io/x/yunion-kube/vendor/yunion.io/x/onecloud/pkg/apis/compute
+  Job:
+    properties:
+      annotations:
+        additionalProperties:
+          type: string
+        description: |-
+          Annotations is an unstructured key value map stored with a resource that may be
+          set by external tools to store and retrieve arbitrary metadata. They are not
+          queryable and should be preserved when modifying objects.
+          More info: http://kubernetes.io/docs/user-guide/annotations
+          +optional
+        type: object
+        x-go-name: Annotations
+      apiVersion:
+        description: |-
+          APIVersion defines the versioned schema of this representation of an object.
+          Servers should convert recognized schemas to the latest internal value, and
+          may reject unrecognized values.
+          More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources
+          +optional
+        type: string
+        x-go-name: APIVersion
+      clusterName:
+        description: |-
+          The name of the cluster which the object belongs to.
+          This is used to distinguish resources with same name and namespace in different clusters.
+          This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request.
+          +optional
+        type: string
+        x-go-name: ClusterName
+      creationTimestamp:
+        $ref: '#/definitions/Time'
+      deletionGracePeriodSeconds:
+        description: |-
+          Number of seconds allowed for this object to gracefully terminate before
+          it will be removed from the system. Only set when deletionTimestamp is also set.
+          May only be shortened.
+          Read-only.
+          +optional
+        format: int64
+        type: integer
+        x-go-name: DeletionGracePeriodSeconds
+      deletionTimestamp:
+        $ref: '#/definitions/Time'
+      finalizers:
+        description: |-
+          Must be empty before the object is deleted from the registry. Each entry
+          is an identifier for the responsible component that will remove the entry
+          from the list. If the deletionTimestamp of the object is non-nil, entries
+          in this list can only be removed.
+          +optional
+          +patchStrategy=merge
+        items:
+          type: string
+        type: array
+        x-go-name: Finalizers
+      generateName:
+        description: |-
+          GenerateName is an optional prefix, used by the server, to generate a unique
+          name ONLY IF the Name field has not been provided.
+          If this field is used, the name returned to the client will be different
+          than the name passed. This value will also be combined with a unique suffix.
+          The provided value has the same validation rules as the Name field,
+          and may be truncated by the length of the suffix required to make the value
+          unique on the server.
+
+          If this field is specified and the generated name exists, the server will
+          NOT return a 409 - instead, it will either return 201 Created or 500 with Reason
+          ServerTimeout indicating a unique name could not be found in the time allotted, and the client
+          should retry (optionally after the time indicated in the Retry-After header).
+
+          Applied only if Name is not specified.
+          More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#idempotency
+          +optional
+        type: string
+        x-go-name: GenerateName
+      generation:
+        description: |-
+          A sequence number representing a specific generation of the desired state.
+          Populated by the system. Read-only.
+          +optional
+        format: int64
+        type: integer
+        x-go-name: Generation
+      initializers:
+        $ref: '#/definitions/Initializers'
+      kind:
+        description: |-
+          Kind is a string value representing the REST resource this object represents.
+          Servers may infer this from the endpoint the client submits requests to.
+          Cannot be updated.
+          In CamelCase.
+          More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds
+          +optional
+        type: string
+        x-go-name: Kind
+      labels:
+        additionalProperties:
+          type: string
+        description: |-
+          Map of string keys and values that can be used to organize and categorize
+          (scope and select) objects. May match selectors of replication controllers
+          and services.
+          More info: http://kubernetes.io/docs/user-guide/labels
+          +optional
+        type: object
+        x-go-name: Labels
+      name:
+        description: |-
+          Name must be unique within a namespace. Is required when creating resources, although
+          some resources may allow a client to request the generation of an appropriate name
+          automatically. Name is primarily intended for creation idempotence and configuration
+          definition.
+          Cannot be updated.
+          More info: http://kubernetes.io/docs/user-guide/identifiers#names
+          +optional
+        type: string
+        x-go-name: Name
+      namespace:
+        description: |-
+          Namespace defines the space within each name must be unique. An empty namespace is
+          equivalent to the "default" namespace, but "default" is the canonical representation.
+          Not all objects are required to be scoped to a namespace - the value of this field for
+          those objects will be empty.
+
+          Must be a DNS_LABEL.
+          Cannot be updated.
+          More info: http://kubernetes.io/docs/user-guide/namespaces
+          +optional
+        type: string
+        x-go-name: Namespace
+      ownerReferences:
+        description: |-
+          List of objects depended by this object. If ALL objects in the list have
+          been deleted, this object will be garbage collected. If this object is managed by a controller,
+          then an entry in this list will point to this controller, with the controller field set to true.
+          There cannot be more than one managing controller.
+          +optional
+          +patchMergeKey=uid
+          +patchStrategy=merge
+        items:
+          $ref: '#/definitions/OwnerReference'
+        type: array
+        x-go-name: OwnerReferences
+      resourceVersion:
+        description: |-
+          An opaque value that represents the internal version of this object that can
+          be used by clients to determine when objects have changed. May be used for optimistic
+          concurrency, change detection, and the watch operation on a resource or set of resources.
+          Clients must treat these values as opaque and passed unmodified back to the server.
+          They may only be valid for a particular resource or set of resources.
+
+          Populated by the system.
+          Read-only.
+          Value must be treated as opaque by clients and .
+          More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#concurrency-control-and-consistency
+          +optional
+        type: string
+        x-go-name: ResourceVersion
+      selfLink:
+        description: |-
+          SelfLink is a URL representing this object.
+          Populated by the system.
+          Read-only.
+          +optional
+        type: string
+        x-go-name: SelfLink
+      spec:
+        $ref: '#/definitions/JobSpec'
+      status:
+        $ref: '#/definitions/JobStatus'
+      uid:
+        $ref: '#/definitions/UID'
+    title: Job represents the configuration of a single job.
+    type: object
+    x-go-package: yunion.io/x/yunion-kube/vendor/k8s.io/api/batch/v1
+  JobCondition:
+    properties:
+      lastProbeTime:
+        $ref: '#/definitions/Time'
+      lastTransitionTime:
+        $ref: '#/definitions/Time'
+      message:
+        description: |-
+          Human readable message indicating details about last transition.
+          +optional
+        type: string
+        x-go-name: Message
+      reason:
+        description: |-
+          (brief) reason for the condition's last transition.
+          +optional
+        type: string
+        x-go-name: Reason
+      status:
+        $ref: '#/definitions/ConditionStatus'
+      type:
+        $ref: '#/definitions/JobConditionType'
+    title: JobCondition describes current state of a job.
+    type: object
+    x-go-package: yunion.io/x/yunion-kube/vendor/k8s.io/api/batch/v1
+  JobConditionType:
+    type: string
+    x-go-package: yunion.io/x/yunion-kube/vendor/k8s.io/api/batch/v1
+  JobCreateInput:
+    properties:
+      activeDeadlineSeconds:
+        description: |-
+          Specifies the duration in seconds relative to the startTime that the job may be active
+          before the system tries to terminate it; value must be positive integer
+          +optional
+        format: int64
+        type: integer
+        x-go-name: ActiveDeadlineSeconds
+      backoffLimit:
+        description: |-
+          Specifies the number of retries before marking this job failed.
+          Defaults to 6
+          +optional
+        format: int32
+        type: integer
+        x-go-name: BackoffLimit
+      cluster:
+        type: string
+        x-go-name: Cluster
+      completions:
+        description: |-
+          Specifies the desired number of successfully finished pods the
+          job should be run with.  Setting to nil means that the success of any
+          pod signals the success of all pods, and allows parallelism to have any positive
+          value.  Setting to 1 means that parallelism is limited to 1 and the success of that
+          pod signals the success of the job.
+          More info: https://kubernetes.io/docs/concepts/workloads/controllers/jobs-run-to-completion/
+          +optional
+        format: int32
+        type: integer
+        x-go-name: Completions
+      manualSelector:
+        description: |-
+          manualSelector controls generation of pod labels and pod selectors.
+          Leave `manualSelector` unset unless you are certain what you are doing.
+          When false or unset, the system pick labels unique to this job
+          and appends those labels to the pod template.  When true,
+          the user is responsible for picking unique labels and specifying
+          the selector.  Failure to pick a unique label may cause this
+          and other jobs to not function correctly.  However, You may see
+          `manualSelector=true` in jobs that were created with the old `extensions/v1beta1`
+          API.
+          More info: https://kubernetes.io/docs/concepts/workloads/controllers/jobs-run-to-completion/#specifying-your-own-pod-selector
+          +optional
+        type: boolean
+        x-go-name: ManualSelector
+      name:
+        type: string
+        x-go-name: Name
+      namespace:
+        type: string
+        x-go-name: Namespace
+      parallelism:
+        description: |-
+          Specifies the maximum desired number of pods the job should
+          run at any given time. The actual number of pods running in steady state will
+          be less than this number when ((.spec.completions - .status.successful) < .spec.parallelism),
+          i.e. when the work left to do is less than max parallelism.
+          More info: https://kubernetes.io/docs/concepts/workloads/controllers/jobs-run-to-completion/
+          +optional
+        format: int32
+        type: integer
+        x-go-name: Parallelism
+      selector:
+        $ref: '#/definitions/LabelSelector'
+      template:
+        $ref: '#/definitions/PodTemplateSpec'
+      ttlSecondsAfterFinished:
+        description: |-
+          ttlSecondsAfterFinished limits the lifetime of a Job that has finished
+          execution (either Complete or Failed). If this field is set,
+          ttlSecondsAfterFinished after the Job finishes, it is eligible to be
+          automatically deleted. When the Job is being deleted, its lifecycle
+          guarantees (e.g. finalizers) will be honored. If this field is unset,
+          the Job won't be automatically deleted. If this field is set to zero,
+          the Job becomes eligible to be deleted immediately after it finishes.
+          This field is alpha-level and is only honored by servers that enable the
+          TTLAfterFinished feature.
+          +optional
+        format: int32
+        type: integer
+        x-go-name: TTLSecondsAfterFinished
+    required:
+    - cluster
+    - name
+    - namespace
+    type: object
+    x-go-package: yunion.io/x/yunion-kube/pkg/apis
+  JobSpec:
+    properties:
+      activeDeadlineSeconds:
+        description: |-
+          Specifies the duration in seconds relative to the startTime that the job may be active
+          before the system tries to terminate it; value must be positive integer
+          +optional
+        format: int64
+        type: integer
+        x-go-name: ActiveDeadlineSeconds
+      backoffLimit:
+        description: |-
+          Specifies the number of retries before marking this job failed.
+          Defaults to 6
+          +optional
+        format: int32
+        type: integer
+        x-go-name: BackoffLimit
+      completions:
+        description: |-
+          Specifies the desired number of successfully finished pods the
+          job should be run with.  Setting to nil means that the success of any
+          pod signals the success of all pods, and allows parallelism to have any positive
+          value.  Setting to 1 means that parallelism is limited to 1 and the success of that
+          pod signals the success of the job.
+          More info: https://kubernetes.io/docs/concepts/workloads/controllers/jobs-run-to-completion/
+          +optional
+        format: int32
+        type: integer
+        x-go-name: Completions
+      manualSelector:
+        description: |-
+          manualSelector controls generation of pod labels and pod selectors.
+          Leave `manualSelector` unset unless you are certain what you are doing.
+          When false or unset, the system pick labels unique to this job
+          and appends those labels to the pod template.  When true,
+          the user is responsible for picking unique labels and specifying
+          the selector.  Failure to pick a unique label may cause this
+          and other jobs to not function correctly.  However, You may see
+          `manualSelector=true` in jobs that were created with the old `extensions/v1beta1`
+          API.
+          More info: https://kubernetes.io/docs/concepts/workloads/controllers/jobs-run-to-completion/#specifying-your-own-pod-selector
+          +optional
+        type: boolean
+        x-go-name: ManualSelector
+      parallelism:
+        description: |-
+          Specifies the maximum desired number of pods the job should
+          run at any given time. The actual number of pods running in steady state will
+          be less than this number when ((.spec.completions - .status.successful) < .spec.parallelism),
+          i.e. when the work left to do is less than max parallelism.
+          More info: https://kubernetes.io/docs/concepts/workloads/controllers/jobs-run-to-completion/
+          +optional
+        format: int32
+        type: integer
+        x-go-name: Parallelism
+      selector:
+        $ref: '#/definitions/LabelSelector'
+      template:
+        $ref: '#/definitions/PodTemplateSpec'
+      ttlSecondsAfterFinished:
+        description: |-
+          ttlSecondsAfterFinished limits the lifetime of a Job that has finished
+          execution (either Complete or Failed). If this field is set,
+          ttlSecondsAfterFinished after the Job finishes, it is eligible to be
+          automatically deleted. When the Job is being deleted, its lifecycle
+          guarantees (e.g. finalizers) will be honored. If this field is unset,
+          the Job won't be automatically deleted. If this field is set to zero,
+          the Job becomes eligible to be deleted immediately after it finishes.
+          This field is alpha-level and is only honored by servers that enable the
+          TTLAfterFinished feature.
+          +optional
+        format: int32
+        type: integer
+        x-go-name: TTLSecondsAfterFinished
+    title: JobSpec describes how the job execution will look like.
+    type: object
+    x-go-package: yunion.io/x/yunion-kube/vendor/k8s.io/api/batch/v1
+  JobStatus:
+    properties:
+      active:
+        description: |-
+          The number of actively running pods.
+          +optional
+        format: int32
+        type: integer
+        x-go-name: Active
+      completionTime:
+        $ref: '#/definitions/Time'
+      conditions:
+        description: |-
+          The latest available observations of an object's current state.
+          More info: https://kubernetes.io/docs/concepts/workloads/controllers/jobs-run-to-completion/
+          +optional
+          +patchMergeKey=type
+          +patchStrategy=merge
+        items:
+          $ref: '#/definitions/JobCondition'
+        type: array
+        x-go-name: Conditions
+      failed:
+        description: |-
+          The number of pods which reached phase Failed.
+          +optional
+        format: int32
+        type: integer
+        x-go-name: Failed
+      startTime:
+        $ref: '#/definitions/Time'
+      succeeded:
+        description: |-
+          The number of pods which reached phase Succeeded.
+          +optional
+        format: int32
+        type: integer
+        x-go-name: Succeeded
+    title: JobStatus represents the current state of a Job.
+    type: object
+    x-go-package: yunion.io/x/yunion-kube/vendor/k8s.io/api/batch/v1
   KeyToPath:
     properties:
       key:
@@ -5223,6 +5636,20 @@ paths:
           $ref: '#/responses/ingressCreateOutput'
       tags:
       - ingress
+  /jobs:
+    post:
+      description: Create job
+      operationId: jobCreateInput
+      parameters:
+      - in: body
+        name: Body
+        schema:
+          $ref: '#/definitions/JobCreateInput'
+      responses:
+        "100":
+          $ref: '#/responses/jobCreateOutput'
+      tags:
+      - job
   /kubeclusters:
     post:
       description: Create kubernetes cluster
@@ -5262,7 +5689,7 @@ paths:
           $ref: '#/definitions/ServiceCreateInput'
       responses:
         "200":
-          $ref: '#/responses/serviceCreateInput'
+          $ref: '#/responses/serviceCreateOutput'
       tags:
       - service
   /statefulsets:
@@ -5311,6 +5738,12 @@ responses:
       properties:
         Output:
           $ref: '#/definitions/Ingress'
+      type: object
+  jobCreateOutput:
+    schema:
+      properties:
+        job:
+          $ref: '#/definitions/Job'
       type: object
   registrySecretCreateOutput:
     schema:
